# RDBMS-BD2

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cualquiera.pem  run.sh  run_tests.sh
.ccls-cache/@@home@nick_cq@Desktop@UTEC@BD-2@Proyecto@rdbmsd@RDBMS-BD2/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@9@algorithm.blob  @usr@include@c++@9@array.blob  @usr@include@c++@9@backward@auto_ptr.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@algorithmfwd.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocated_ptr.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@atomic_base.h.blob  @usr@include@c++@9@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@codecvt.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@enable_special_members.h.blob  @usr@include@c++@9@bits@erase_if.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@fs_dir.h.blob  @usr@include@c++@9@bits@fs_fwd.h.blob  @usr@include@c++@9@bits@fs_ops.h.blob  @usr@include@c++@9@bits@fs_path.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@hashtable.h.blob  @usr@include@c++@9@bits@hashtable_policy.h.blob  @usr@include@c++@9@bits@invoke.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  (+202 more)
.ccls-cache/@home@nick_cq@Desktop@UTEC@BD-2@Proyecto@rdbmsd@RDBMS-BD2/: src@DBEngine@Constants.hpp.blob  src@DBEngine@DBEngine.cpp  src@DBEngine@DBEngine.cpp.blob
.github/workflows/: cmake-multi-platform.yml
Posts/: create_user_table.http  insert_users_csv.http
README/api/: swagger.yaml
SAMPLE_CSV/: students_insert.csv
experimental/: create_table.cpp  define.cpp  file_template.cpp  main.cpp  record_class.cpp  static_fstream.cpp  thread_joinable.cpp  tuple.cpp  tuple2.cpp  type_runtime.cpp  types.cpp  variant.cpp  void_return.cpp
include/Api/: Api.hpp
include/DBEngine/: DBEngine.hpp  HeapFile.hpp
include/DBEngine/IndexManager/: IndexConcept.hpp  IndexContainer.hpp  Indexes.hpp
include/DBEngine/IndexManager/Avl/: class_avl_index.cpp  class_avl_index.h  class_avl_index_header.h  class_avl_index_node.h  class_data.h  class_response.h  libraries.h  main.cpp  run.sh  utils.h
include/DBEngine/Record/: Record.hpp
libs/Indexes/: CMakeLists.txt  data.hpp  index.hpp  index.tpp  libraries.hpp  record.hpp  response.hpp  utils.hpp
libs/Indexes/AVL/: avl_index.hpp  avl_index.tpp  avl_index_header.hpp  avl_index_node.hpp  avl_index_utils.hpp  main.cpp
libs/Indexes/ISAM/: CMakeLists.txt
libs/Indexes/ISAM/include/: DataPage.h  ISAM.h  ISAMRecord.h  IndexPage.h  Metadata.h
libs/Indexes/ISAM/src/: DataPage.cpp  ISAM.cpp  IndexPage.cpp  Metadata.cpp
libs/Indexes/Sequential/: binary_search_response.hpp  sequential_index.hpp  sequential_index.tpp  sequential_index_header.hpp  sequential_index_record.hpp
libs/SqlParser/: SqlParser.cpp
src/: main.cpp
src/Api/: Api.cpp  CMakeLists.txt
src/DBEngine/: CMakeLists.txt  Constants.hpp  DBEngine.cpp  HeapFile.cpp
src/DBEngine/IndexManager/: Indexes.cpp
src/DBEngine/Record/: Record.cpp
tests/: CMakeLists.txt  apiTest.cpp  bigTest.cpp  bulkInsert.cpp  createIndex.cpp  createTable.cpp  integration.cpp  noIdxQueries.cpp
